debug and add event register subject for specific major